[package]
name = "refract-cli"
version = "0.3.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "refract"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dunce = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
walkdir = "2"
yaml-rust2 = "0.11.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
